#[derive(Debug, Clone, Default)]
pub struct SpineItemRef {
    pub idref: String,
}
